modified remove to do

--- a/ToDoList JQuery.html
+++ b/ToDoList JQuery.html
@@ -30,8 +30,9 @@
         }
         function todoRemove()
         {
-            var clickedLi = $(this);
-            clickedLi.remove();
+/*             var clickedLi = $(this);
+            clickedLi.remove(); */
+            $(this).remove();
         }
     </script>
 </html>
