--- a/ToDoList JQuery.html
+++ b/ToDoList JQuery.html
@@ -26,6 +26,7 @@
                 $('<li>'+ inputValue + '</li>')
                 .appendTo(ulEl)
                 .click(todoRemove);
+                inputEl.val('');
             }
         }
         function todoRemove()
